k8s/base/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sector-sim-frontend
  namespace: sector-sim
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - sector.seketa.it
      secretName: sector-seketa-it-tls
  rules:
    - host: sector.seketa.it
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 9000
